--- a/views/login/login.html
+++ b/views/login/login.html
@@ -232,5 +232,18 @@ Released   : 20130509
     <p>Copyright (c) 2013 Sitename.com. All rights reserved. Images by <a href="http://fotogrph.com/">Fotogrph</a>. Design by <a href="http://www.freecsstemplates.org/" rel="nofollow">FreeCSSTemplates.org</a>.</p>
 </div>
 <!-- end #footer -->
+<!-- START CHAT -->
 </body>
+<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+<link href="/stylesheets/main.css" rel="stylesheet">
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.1.2/handlebars.min.js"></script>
+<script src="../chat/stapes.js"></script>
+<script type="text/javascript" src="../chat/sock.js"></script>
+<script type="text/javascript" src="../chat/chatView.js"></script>
+<script type="text/javascript" src="../chat/chatModels.js"></script>
+<script type="text/javascript" src="../chat/chatStore.js"></script>
+<script type="text/javascript" src="../chat/chatController.js"></script>
+<script type="text/javascript" src="../chat/chat.js"></script>
+<!-- END CHAT -->
 </html>
