--- a/views/sp/history.html
+++ b/views/sp/history.html
@@ -347,12 +347,12 @@ Released   : 20130509
 <link href="/stylesheets/main.css" rel="stylesheet">
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.1.2/handlebars.min.js"></script>
-<script src="../chat/stapes.js"></script>
-<script type="text/javascript" src="../chat/sock.js"></script>
-<script type="text/javascript" src="../chat/chatView.js"></script>
-<script type="text/javascript" src="../chat/chatModels.js"></script>
-<script type="text/javascript" src="../chat/chatStore.js"></script>
-<script type="text/javascript" src="../chat/chatController.js"></script>
-<script type="text/javascript" src="../chat/chat.js"></script>
+<script src="http://eaa.ece.uprm.edu:3500/js/stapes.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/sock.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatView.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatModels.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatStore.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatController.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chat.js"></script>
 <!-- END CHAT -->
 </html>
