Checking Ricardo's original code.

--- a/views/login/untitled folder/login.html
+++ b/views/login/untitled folder/login.html
@@ -18,12 +18,12 @@ Released   : 20130509
     <title>Login</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Abel|Satisfy' rel='stylesheet' type='text/css'>
-    <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="/stylesheets/styleFinal.css" rel="stylesheet" type="text/css" media="screen" />
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>
         //<!-----------TRANSFORMS a String Object to a JSON Object--------->
-        $.fn.serializeObject = function()
+        $.prototype.serializeObject = function() //$.fn.serializeObject
         {
             var o = {};
             var a = this.serializeArray();
@@ -77,6 +77,10 @@ Released   : 20130509
                                         sessionStorage.setItem("role", data.role);
                                         sessionStorage.setItem("username", data.username);
                                         sessionStorage.setItem("agencyPhoneNumber", data.agencyPhoneNumber);
+                                        var employeeUserName = data.username;
+                                        var companyPhoneNumber = data.agencyPhoneNumber;
+                                        chat.setUserNameAndPhoneNumber(employeeUserName, companyPhoneNumber);
+                                        chat.model.login(companyPhoneNumber, employeeUserName);
                                         window.location.replace("/sp");
                                     }
 
@@ -228,5 +232,18 @@ Released   : 20130509
     <p>Copyright (c) 2013 Sitename.com. All rights reserved. Images by <a href="http://fotogrph.com/">Fotogrph</a>. Design by <a href="http://www.freecsstemplates.org/" rel="nofollow">FreeCSSTemplates.org</a>.</p>
 </div>
 <!-- end #footer -->
+<!-- START CHAT -->
 </body>
+<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+<link href="/stylesheets/main.css" rel="stylesheet">
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.1.2/handlebars.min.js"></script>
+<script src="http://eaa.ece.uprm.edu:3500/js/stapes.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/sock.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatView.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatModels.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatStore.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatController.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chat.js"></script>
+<!-- END CHAT -->
 </html>
