--- a/views/login/login.html
+++ b/views/login/login.html
@@ -77,6 +77,7 @@ Released   : 20130509
                                         sessionStorage.setItem("role", data.role);
                                         sessionStorage.setItem("username", data.username);
                                         sessionStorage.setItem("agencyPhoneNumber", data.agencyPhoneNumber);
+                                        chat.model.login(data.agencyPhoneNumber, data.username);
                                         window.location.replace("/sp");
                                     }
 
@@ -228,5 +229,16 @@ Released   : 20130509
     <p>Copyright (c) 2013 Sitename.com. All rights reserved. Images by <a href="http://fotogrph.com/">Fotogrph</a>. Design by <a href="http://www.freecsstemplates.org/" rel="nofollow">FreeCSSTemplates.org</a>.</p>
 </div>
 <!-- end #footer -->
-</body>
+<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+<link href="/stylesheets/main.css" rel="stylesheet">
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.1.2/handlebars.min.js"></script>
+<script src="http://eaa.ece.uprm.edu:3500/js/stapes.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/sock.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatView.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatModels.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatStore.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatController.js"></script>
+<script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chat.js"></script>
+<!-- END CHAT -->
 </html>
