--- a/views/login/login.html
+++ b/views/login/login.html
@@ -77,7 +77,7 @@ Released   : 20130509
                                         sessionStorage.setItem("role", data.role);
                                         sessionStorage.setItem("username", data.username);
                                         sessionStorage.setItem("agencyPhoneNumber", data.agencyPhoneNumber);
-                                        chat.model.login(data.agencyPhoneNumber, data.username);
+                                        //chat.model.login(data.agencyPhoneNumber, data.username);
                                         window.location.replace("/sp");
                                     }
 
