--- a/views/login/login.html
+++ b/views/login/login.html
@@ -77,7 +77,7 @@ Released   : 20130509
                                         sessionStorage.setItem("role", data.role);
                                         sessionStorage.setItem("username", data.username);
                                         sessionStorage.setItem("agencyPhoneNumber", data.agencyPhoneNumber);
-                                        //chat.model.login(data.agencyPhoneNumber, data.username);
+                                        chat.model.login(data.agencyPhoneNumber, data.username);
                                         window.location.replace("/sp");
                                     }
 
@@ -229,6 +229,7 @@ Released   : 20130509
     <p>Copyright (c) 2013 Sitename.com. All rights reserved. Images by <a href="http://fotogrph.com/">Fotogrph</a>. Design by <a href="http://www.freecsstemplates.org/" rel="nofollow">FreeCSSTemplates.org</a>.</p>
 </div>
 <!-- end #footer -->
+</body>
 <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 <link href="/stylesheets/main.css" rel="stylesheet">
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
