--- a/views/sp/activeEmergency.html
+++ b/views/sp/activeEmergency.html
@@ -23,7 +23,7 @@ Released   : 20130509
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
-//<!---------------------------------ROBERTO--------------------------------------------------------------------->
+<!---------------------------------ROBERTO--------------------------------------------------------------------->
 
 <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 <link href="/stylesheets/main.css" rel="stylesheet">
@@ -36,7 +36,7 @@ Released   : 20130509
 <script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatController.js"></script>
 <script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chat.js"></script>
 
-//<!---------------------------------ROBERTO------------------------------------------------------------------------->
+<!---------------------------------ROBERTO------------------------------------------------------------------------->
 
 <script>
 
@@ -60,7 +60,7 @@ $.fn.serializeObject = function()
     return o;
 };
 
-<!-----------CHANGES Sidebar from show to add Emergency-------->
+//<!--------------------------------------CHANGES Sidebar from show to add Emergency-------->
 
 $(function(){
     $("#change").click(function(){
@@ -222,7 +222,8 @@ $(function() {
         return false;
     });
 });
-<!---------------------RE-POPULATES de Active Emergencies container if the window is closed or refreshed-------------->
+
+//<!--------------------------------------RE-POPULATES de Active Emergencies container if the window is closed or refreshed-------------->
 $(window).load(function () {
 
 
@@ -396,7 +397,7 @@ $(function(){
 
 
 
-<!----------------------DISPLAYS the information of the emergency on screen along with the clients location(map)-------------->
+//<!------------------------DISPLAYS the information of the emergency on screen along with the clients location(map)-->
 
 $(function() {
     $("#show").click(function() {
