fixed comment issues

--- a/views/sp/history.html
+++ b/views/sp/history.html
@@ -352,7 +352,7 @@ $(function() {
             </ul>
           </div>
           <div id="input">
-            <input type="text" placeholder="Send Message">
+            <input type="text" placeholder="Send Message" maxlength="160">
           </div>
         </div>
       </div>
