--- a/views/sp/history.html
+++ b/views/sp/history.html
@@ -20,7 +20,8 @@ Released   : 20130509
   <link href='http://fonts.googleapis.com/css?family=Abel|Satisfy' rel='stylesheet' type='text/css'>
   <link href="/stylesheets/styleFinal.css" rel="stylesheet" type="text/css" media="screen" />
 
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
+  <<script type="text/javascript" src="//code.jquery.com/jquery-2.0.2.min.js"></script>
   <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
   <!-- ROBERTO -->
