--- a/views/sp/history.html
+++ b/views/sp/history.html
@@ -237,6 +237,7 @@ $(function() {
 
     //<!----------------------------------------------------Log out-------------------------------------------------------->
     function logOut(){
+      chat.store.clear();
       chat.model.server.close();
       sessionStorage.clear();
       window.location.replace("/");
