--- a/views/sp/activeEmergency.html
+++ b/views/sp/activeEmergency.html
@@ -19,7 +19,7 @@ Released   : 20130509
             <link href="/stylesheets/styleFinal.css" rel="stylesheet" type="text/css" media="screen" />
             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
             <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-            //<!-- ROBERTO -->
+            <!-- ROBERTO -->
             <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
                 <link href="/stylesheets/main.css" rel="stylesheet">
                 <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
@@ -31,7 +31,7 @@ Released   : 20130509
                 <script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatStore.js"></script>
                 <script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chatController.js"></script>
                 <script type="text/javascript" src="http://eaa.ece.uprm.edu:3500/js/chat.js"></script>
-                //<!-- ROBERTO -->
+                <!-- ROBERTO -->
                 <script>
                 var oldRelayInfo = "";
                 //<!-----------TRANSFORMS a String Object to a JSON Object--------->
