--- a/views/sp/activeEmergency.html
+++ b/views/sp/activeEmergency.html
@@ -453,7 +453,7 @@ Released   : 20130509
                 //<!----------------------------------------------------Log out-------------------------------------------------------->
                 function logOut(){
                 chat.store.clear();
-                chat.model.server.close();
+                chat.model.close();
                 sessionStorage.clear();
                 window.location.replace("/");
                 };
