--- a/views/sp/activeEmergency.html
+++ b/views/sp/activeEmergency.html
@@ -506,7 +506,7 @@ Released   : 20130509
                                 </div>
                             </div>
                         </div>
-                        <!--end of Active and Relayed Emergencies containers--->
+                        <!--end of Active and Relayed Emergencies containers -->
                         <!-- end #content -->
                         <div id="sidebar1">
                             <ul>
@@ -535,21 +535,21 @@ Released   : 20130509
                                     <ul>
                                         <form id="add" action="" method="post">
                                             <li>Client Phone Number: <input id="clientPhoneNumber"type="tel" name="clientPhoneNumber" maxlength="10" size="10" pattern="[0-9]{10}" title="Only 10 digit phone numbers(No dashes)" required/></li>
-                                            <li>Name:<input id="clientName" type="text" name="clientName" maxlength="40" size="30"required></li>
-                                            <li>Address:<input id="clientAddress" type="text" name="clientAddress" maxlength="100" size="30" required></li>
+                                            <li>Name:<input id="clientName" type="text" name="clientName" maxlength="40" size="30"required/></li>
+                                            <li>Address:<input id="clientAddress" type="text" name="clientAddress" maxlength="100" size="30" required/></li>
                                             <li>Type of Emergency:<input id="emergencyType" type="text" name="emergencyType" required/></li>
                                             <li>Emergency at Home?:<input id="yes" type="radio" name="outsideHome" value="yes" checked >Yes</input><input id="no" type="radio" name="outsideHome" value="no" >No</input></li>
-                                            <li>Assigned Agent: <input id="attendedBy" type="text" name="attendedBy" maxlength="40" ></li>
+                                            <li>Assigned Agent: <input id="attendedBy" type="text" name="attendedBy" maxlength="40" /></li>
                                             <li>Emergency Description:<br><textarea id="emergencyDetails" rows="7" cols="40" name="emergencyDetails"  placeholder="Short description of the emergency" required></textarea></li>
                                             <li>Client Location:<p id="c"></p></li>
-                                            <input type=hidden id="latitude" name="latitude" >
-                                            <input type=hidden id="longitude" name="longitude" >
+                                            <input type=hidden id="latitude" name="latitude" />
+                                            <input type=hidden id="longitude" name="longitude" />
                                             <input type=hidden id="timeStamp" name="timeStamp"/>
                                             <input type=hidden id="timeCompleted" name="timeCompleted"/>
                                             <input type=hidden id="hasApplication" name="hasApplication"/>
                                             <input type=hidden id="oldAgencyPhoneNumber" name="oldAgencyPhoneNumber" maxlength="10" size="10"/>
                                             <input type=hidden id="newAgencyPhoneNumber" name="newAgencyPhoneNumber" maxlength="10" size="10"/>
-                                            <input type=hidden id="reason" name="reason" maxlength="500"/>
+                                            <input type=hidden id="reason" name="reason" />
                                             <button id="save" type="button" class="more" disabled>Submit</button>
                                         </form>
                                     </ul>
