--- a/views/sp/activeEmergency.html
+++ b/views/sp/activeEmergency.html
@@ -151,7 +151,7 @@
                 }
                 $("#oldAgencyPhoneNumber").val(sessionStorage.getItem("agencyPhoneNumber"));
                 
-				$( "#myform" ).validate({
+				$( "#add" ).validate({
 				rules: {
 					clientPhoneNumber: {
 							required: true
