--- a/views/sp/activeEmergency.html
+++ b/views/sp/activeEmergency.html
@@ -152,6 +152,10 @@
                 }
                 $("#oldAgencyPhoneNumber").val(sessionStorage.getItem("agencyPhoneNumber"));
                 
+				jQuery.validator.setDefaults({
+				debug: true,
+				success: "valid"
+				});
 				$( "#add" ).validate({
 				rules: {
 					clientPhoneNumber: {
