--- a/views/admin/adminHome.html
+++ b/views/admin/adminHome.html
@@ -70,6 +70,7 @@ $(function(){
             success : function(data) {
 
                 if( data != ""){
+                    alert('data.length '+data.length);
 
                     $(".entry").css("display", "none");
                     $(".entry1").css("display", "inline");
